# hotwire-lite

./: .gitignore  ADC.c  ADC.h  Button.h  Calibrate.c  Calibrate.h  Debug.c  Init.h  LED.h  PID.c  Power.c  SysTick.c  SysTick.h  UART.c  main.c  readme.md
dsp/: SA_test.py  SkippingAverage.py  analysis.ipynb  sma.py
pcb/: .hotwire-lite.net.swp  fp-info-cache  fp-lib-table  hotwire-lite-cache.lib  hotwire-lite.kicad_pcb  hotwire-lite.kicad_pcb-bak  hotwire-lite.kicad_prl  hotwire-lite.kicad_pro  hotwire-lite.kicad_sch  hotwire-lite.kicad_sym  hotwire-lite.net  hotwire-lite.pro  hotwire-lite.sch  hotwire-lite.sch-bak  readme.md  sym-lib-table
pcb/calculations/: mosfet.ipynb  shunt.ipynb
pcb/gerber/: hotwire-lite-B_Cu.gbr  hotwire-lite-B_Mask.gbr  hotwire-lite-B_Paste.gbr  hotwire-lite-B_Silkscreen.gbr  hotwire-lite-Edge_Cuts.gbr  hotwire-lite-F_Cu.gbr  hotwire-lite-F_Mask.gbr  hotwire-lite-F_Paste.gbr  hotwire-lite-F_Silkscreen.gbr  hotwire-lite-NPTH.drl  hotwire-lite-PTH.drl  hotwire-lite-job.gbrjob
pcb/gerber/v0.1/: hotwire-lite-B_Cu.gbr  hotwire-lite-B_Mask.gbr  hotwire-lite-B_Paste.gbr  hotwire-lite-PTH.drl  (+8 more)
pcb/hotwire-lite.pretty/: wire_solder_pad.kicad_mod
src/: ADC.c  Button.c  Button.h  CMakeLists.txt  Calibrate.c  Calibrate.h  Debug.h  EEPROM.c  EEPROM.h  Init.h  LED.c  LED.h  Makefile  PID.c  PID.h  PWM.c  PWM.h  Power.c  Power.h  SysTick.c  UART.c  UART.h  hotwire-lite.atsln  hotwire-lite.componentinfo.xml  hotwire-lite.cproj  main.c
src/filter/: SkippingAverage.c  SkippingAverage.h
src/filter_deprecated/: SkippingAverage.h
src/pid/: PID.c  PID.h
